<resources>
    <string name="app_name">CRUDLoginPage</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="role">Role</string>
    <string name="data_user">Data User</string>
    <string name="id">ID</string>
    <string name="something_went_wrong">Somehting Went Wrong</string>
    <string name="retry">Retry</string>

    <string-array name="roles_array">
        <item>Admin</item>
        <item>Normal User</item>
    </string-array>
</resources>