<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Username TextInputField -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="24sp"
            android:layout_marginTop="@dimen/margin_24dp"
            app:layout_constraintBottom_toTopOf="@+id/usernameEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/welcomeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_24dp"/>

        <!-- Password TextInputField -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/usernameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_16dp"/>

        <!-- Email TextInputField -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_16dp"/>

        <!-- Role Spinner -->
        <Spinner
            android:id="@+id/roleSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_16dp"/>

        <!-- Submit Button -->
        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginBottom="@dimen/margin_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roleSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/submitButton"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_24dp"/>

        <!-- Cancel Button -->
        <Button
            android:id="@+id/submitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@id/roleSpinner"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>